<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bandhan.mantra.activities.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/app_big_padding">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/app_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/app_min_margin"
                android:layout_marginLeft="@dimen/app_big_margin"
                android:layout_marginRight="@dimen/app_big_margin"
                android:layout_marginTop="@dimen/app_min_margin"
                android:fontFamily="@string/futura_book_bt_ttf"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="@dimen/app_normal_padding"
                android:textColor="@color/SubTextColor"
                android:textColorHint="@color/ColorPlaceHolder"
                android:textSize="15sp"
                android:text="client@gmail.com" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_min_margin"
            android:layout_marginLeft="@dimen/app_big_margin"
            android:layout_marginRight="@dimen/app_big_margin"
            android:layout_marginTop="@dimen/app_min_margin"
            android:layout_weight="1"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="@string/futura_book_bt_ttf"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeActionLabel="@string/login"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/app_normal_padding"
                android:textColor="@color/SubTextColor"
                android:textColorHint="@color/ColorPlaceHolder"
                android:textSize="15sp"
                android:text="admin123" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/app_min_margin"
            android:layout_marginLeft="@dimen/app_big_margin"
            android:layout_marginRight="@dimen/app_big_margin"
            android:layout_marginTop="@dimen/app_min_margin"
            android:background="@drawable/green_border_background"
            android:fontFamily="@string/futura_book_bt_ttf"
            android:text="@string/login"
            android:textColor="@color/ColorsWhite"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextViewForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/app_min_margin"
            android:layout_marginLeft="@dimen/app_big_margin"
            android:layout_marginRight="@dimen/app_big_margin"
            android:layout_marginTop="@dimen/app_min_margin"
            android:fontFamily="@string/futura_book_bt_ttf"
            android:text="@string/forgotpassword"
            android:textAlignment="viewEnd"
            android:textSize="14dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextViewNewaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/app_normal_margin"
        android:fontFamily="@string/futura_book_bt_ttf"
        android:text="@string/createaccount"
        android:textAlignment="center"
        android:textSize="16dp"
        android:visibility="gone"/>

</RelativeLayout>
