<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bandhan.mantra.activities.Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_notification"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardCornerRadius="3dp"
            card_view:contentPadding="7dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardElevation="10dp"
            android:clipToPadding="false"
            android:clipChildren="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dancing_script_ot"
                app:fontFamily="@font/dancing_script_ot"
                android:text="Create new account"
                android:textSize="30dp"
                android:layout_marginBottom="@dimen/app_min_margin"
                android:layout_marginLeft="@dimen/app_min_margin"
                android:layout_marginRight="@dimen/app_min_margin"
                android:layout_marginTop="@dimen/app_min_margin"
                tools:ignore="MissingPrefix" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/app_min_margin"
                android:layout_marginLeft="@dimen/app_min_margin"
                android:layout_marginRight="@dimen/app_min_margin"
                android:layout_marginTop="@dimen/app_min_margin"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/futura_book_bt_ttf"
                        android:hint="@string/firstname"
                        android:inputType="text"
                        android:padding="@dimen/app_normal_padding"
                        android:textColor="@color/SubTextColor"
                        android:textColorHint="@color/ColorPlaceHolder"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtLasNameName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@string/futura_book_bt_ttf"
                        android:hint="@string/lastname"
                        android:inputType="text"
                        android:padding="@dimen/app_normal_padding"
                        android:textColor="@color/SubTextColor"
                        android:textColorHint="@color/ColorPlaceHolder"
                        android:textSize="18sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/app_min_margin"
                    android:layout_marginLeft="@dimen/app_min_margin"
                    android:layout_marginRight="@dimen/app_min_margin"
                    android:layout_marginTop="@dimen/app_min_margin"
                    android:fontFamily="@string/futura_book_bt_ttf"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/app_normal_padding"
                    android:textColor="@color/SubTextColor"
                    android:textColorHint="@color/ColorPlaceHolder"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/app_min_margin"
                    android:layout_marginLeft="@dimen/app_min_margin"
                    android:layout_marginRight="@dimen/app_min_margin"
                    android:layout_marginTop="@dimen/app_min_margin"
                    android:fontFamily="@string/futura_book_bt_ttf"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/app_normal_padding"
                    android:textColor="@color/SubTextColor"
                    android:textColorHint="@color/ColorPlaceHolder"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/app_min_margin"
                android:layout_marginRight="@dimen/app_min_margin"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:fontFamily="@string/futura_book_bt_ttf"
                    android:hint="@string/password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/login"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="@dimen/app_normal_padding"
                    android:textColor="@color/SubTextColor"
                    android:textColorHint="@color/ColorPlaceHolder"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLoginPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_min_margin"
                android:layout_marginLeft="@dimen/app_min_margin"
                android:layout_marginRight="@dimen/app_min_margin"
                android:layout_marginTop="@dimen/app_min_margin"
                android:layout_weight="1"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtCompny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@string/futura_book_bt_ttf"
                    android:hint="@string/company"
                    android:inputType="text"
                    android:maxLength="10"
                    android:padding="@dimen/app_normal_padding"
                    android:textColor="@color/SubTextColor"
                    android:textColorHint="@color/ColorPlaceHolder"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginBottom="@dimen/app_min_margin"
                android:layout_marginLeft="@dimen/app_min_margin"
                android:layout_marginRight="@dimen/app_min_margin"
                android:layout_marginTop="@dimen/app_min_margin"
                android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@string/futura_book_bt_ttf"
                android:hint="@string/address"
                android:inputType="textMultiLine"
                android:maxLength="10"
                android:padding="@dimen/app_normal_padding"
                android:textColor="@color/SubTextColor"
                android:textColorHint="@color/ColorPlaceHolder"
                android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/app_min_margin"
                android:layout_marginLeft="@dimen/app_min_margin"
                android:layout_marginRight="@dimen/app_min_margin"
                android:layout_marginTop="@dimen/app_min_margin"
                android:orientation="horizontal"
                android:weightSum="2">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/app_normal_margin"
                    android:layout_weight="1"
                    android:background="@drawable/green_border_background"
                    android:fontFamily="@string/futura_book_bt_ttf"
                    android:text="@string/getotp"
                    android:textColor="@color/ColorsWhite" />

                <EditText
                    android:id="@+id/edtOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@string/futura_book_bt_ttf"
                    android:hint="Enter OTP"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/login"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/app_normal_padding"
                    android:textColor="@color/SubTextColor"
                    android:textColorHint="@color/ColorPlaceHolder"
                    android:textSize="20sp" />



            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/app_min_margin"
                android:layout_marginLeft="@dimen/app_min_margin"
                android:layout_marginRight="@dimen/app_min_margin"
                android:layout_marginTop="@dimen/app_min_margin"
                android:background="@drawable/green_border_background"
                android:fontFamily="@string/futura_book_bt_ttf"
                android:text="@string/register"
                android:textColor="@color/ColorsWhite"
                android:textSize="15sp" />
        </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>

</RelativeLayout>
